Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
   </section>
 
   <footer>Primavera para Anto ♥</footer>
+  <p class="sub-subtitulo">Sos la luz que ilumina los días de Apolo 🐶</p>
 
   <script>
     (function(){
