Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -271,8 +271,9 @@
     </div>
   </section>
 
-  <footer>Primavera para Anto ♥</footer>
-  <p class="sub-subtitulo">Sos la luz que ilumina los días de Apolo 🐶</p>
+  <footer>Primavera para Anto ♥ 
+Sos la luz que ilumina los días de Apolo 🐶 </p></footer>
+  
 
   <script>
     (function(){
